--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 accelerate==0.21.0
 albumentations==1.3.0
 numpy==1.24.2
-torch==2.0.1+cu118
-pytorch_lightning==2.0.9
+torch==1.13.1
+pytorch_lightning==2.0.2
 tqdm==4.65.0
 transformers==4.30.2
 Pillow==10.0.1
